--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,67 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp">
 
-    <TextView
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:ems="10"
+            android:textAlignment="center"
+            android:hint="Number 1" android:inputType="number" android:id="@+id/number1"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.503"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/number2"
+            android:inputType="phone" android:textAlignment="center" android:hint="Number 2"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintHorizontal_bias="0.503"/>
+    <Button
+            android:text="+"
+            android:layout_width="59dp"
+            android:layout_height="43dp"
+            android:id="@+id/button2" android:onClick="sum"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/number1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/number2"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/button6"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.91"/>
+    <Button
+            android:text="-"
+            android:layout_width="59dp"
+            android:layout_height="43dp"
+            android:id="@+id/button6" android:onClick="sub"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/number1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/number2"
+            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/button7"/>
+    <Button
+            android:text="*"
+            android:layout_width="59dp"
+            android:layout_height="43dp"
+            android:id="@+id/button7" android:onClick="multiply"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/number1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/number2"
+            android:layout_marginEnd="12dp" app:layout_constraintEnd_toStartOf="@+id/button8"/>
+    <Button
+            android:text="/"
+            android:layout_width="59dp"
+            android:layout_height="43dp"
+            android:id="@+id/button8" android:onClick="div"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/number1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/number2"
+            android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="Result"
+            android:layout_width="241dp"
+            android:layout_height="29dp"
+            android:id="@+id/textView" android:textSize="24sp"
+            android:textAlignment="center"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="180dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.503"/>
 </android.support.constraint.ConstraintLayout>
